// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginItem > (Snapshot) renders disabled state 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col sm:flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="border-border text-foreground h-full w-full rounded-md border-(length:--border-width) bg-background-secondary shadow-shadow opacity-30 relative flex flex-1 cursor-default flex-col gap-2 p-3 sm:p-4 overflow-hidden transition-opacity duration-250"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full items-start gap-3"
      >
        <div
          class="border-border text-foreground flex rounded-md border-(length:--border-width) bg-background-secondary shadow-shadow h-10 w-10 sm:h-12 sm:w-12 shrink-0 items-center justify-center overflow-hidden p-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-music"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18V5l12-2v13"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <circle
              cx="18"
              cy="16"
              r="3"
            />
          </svg>
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <h3
              class="text-foreground inline-flex flex-wrap items-baseline gap-1.5 text-base sm:text-lg leading-tight font-bold select-none"
            >
              <span
                data-testid="plugin-name"
              >
                Disabled Plugin
              </span>
              <span
                class="text-foreground-secondary text-xs sm:text-sm font-normal select-none"
              >
                <span
                  class="mr-1 opacity-60"
                >
                  by
                </span>
                <span
                  data-testid="plugin-author"
                >
                  Nuclear Team
                </span>
              </span>
            </h3>
          </div>
          <p
            class="text-foreground mt-1.5 text-xs sm:text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            This plugin is currently disabled.
          </p>
        </div>
      </div>
      <div
        class="flex items-center justify-between mt-1 pt-2 border-t border-border/40"
      >
        <span
          class="text-foreground-secondary flex flex-wrap items-center gap-1.5 text-xs sm:text-sm font-normal"
          data-testid="plugin-version"
        />
        <div
          class="flex items-center gap-1.5 shrink-0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders rightAccessory content 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col sm:flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="border-border text-foreground h-full w-full rounded-md border-(length:--border-width) bg-background-secondary shadow-shadow relative flex flex-1 cursor-default flex-col gap-2 p-3 sm:p-4 overflow-hidden transition-opacity duration-250"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full items-start gap-3"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <h3
              class="text-foreground inline-flex flex-wrap items-baseline gap-1.5 text-base sm:text-lg leading-tight font-bold select-none"
            >
              <span
                data-testid="plugin-name"
              >
                Accessory Plugin
              </span>
              <span
                class="text-foreground-secondary text-xs sm:text-sm font-normal select-none"
              >
                <span
                  class="mr-1 opacity-60"
                >
                  by
                </span>
                <span
                  data-testid="plugin-author"
                >
                  Nuclear Team
                </span>
              </span>
            </h3>
            <div
              class="shrink-0"
            >
              <span>
                Accessory
              </span>
            </div>
          </div>
          <p
            class="text-foreground mt-1.5 text-xs sm:text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            Has accessory on the right.
          </p>
        </div>
      </div>
      <div
        class="flex items-center justify-between mt-1 pt-2 border-t border-border/40"
      >
        <span
          class="text-foreground-secondary flex flex-wrap items-center gap-1.5 text-xs sm:text-sm font-normal"
          data-testid="plugin-version"
        />
        <div
          class="flex items-center gap-1.5 shrink-0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders with all props 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col sm:flex-row gap-2"
  >
    <div
      aria-busy="false"
      class="text-foreground h-full w-full rounded-md border-(length:--border-width) bg-accent-orange/30 shadow-shadow ring-accent-orange ring-2 select-none ring-inset relative flex flex-1 cursor-default flex-col gap-2 p-3 sm:p-4 overflow-hidden transition-opacity duration-250 border-accent-red"
      data-testid="plugin-item"
    >
      <div
        class="flex w-full items-start gap-3"
      >
        <div
          class="border-border text-foreground flex rounded-md border-(length:--border-width) bg-background-secondary shadow-shadow h-10 w-10 sm:h-12 sm:w-12 shrink-0 items-center justify-center overflow-hidden p-0"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-music"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18V5l12-2v13"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <circle
              cx="18"
              cy="16"
              r="3"
            />
          </svg>
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <h3
              class="text-foreground inline-flex flex-wrap items-baseline gap-1.5 text-base sm:text-lg leading-tight font-bold select-none"
            >
              <span
                data-testid="plugin-name"
              >
                YouTube Music
              </span>
              <span
                class="text-foreground-secondary text-xs sm:text-sm font-normal select-none"
              >
                <span
                  class="mr-1 opacity-60"
                >
                  by
                </span>
                <span
                  data-testid="plugin-author"
                >
                  Nuclear Team
                </span>
              </span>
            </h3>
          </div>
          <p
            class="text-foreground mt-1.5 text-xs sm:text-sm leading-relaxed select-none"
            data-testid="plugin-description"
          >
            Stream music directly from YouTube Music with full search and playlist support.
          </p>
        </div>
      </div>
      <div
        class="flex items-center justify-between mt-1 pt-2 border-t border-border/40"
      >
        <span
          class="text-foreground-secondary flex flex-wrap items-center gap-1.5 text-xs sm:text-sm font-normal"
          data-testid="plugin-version"
        >
          <span
            class="border-border inline-flex items-center justify-center border-(length:--border-width) whitespace-nowrap rounded-full px-2 py-0.5 text-xs font-semibold bg-accent-purple text-foreground"
          >
            200ms
          </span>
        </span>
        <div
          class="flex items-center gap-1.5 shrink-0"
        >
          <button
            class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center"
            data-headlessui-state=""
            data-testid="plugin-action-view-details"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="border-border text-foreground flex h-full w-full rounded-md border-(length:--border-width) p-4 bg-background-secondary shadow-none flex-row items-center justify-start gap-1 px-2 py-1 text-xs"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert"
          fill="none"
          height="16"
          stroke="var(--accent-orange)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        Loaded with errors
      </div>
    </div>
  </div>
</DocumentFragment>
`;
